# boba

./: Makefile.am  NEWS  README.md  TODO.md  boba.pc.in  configure.ac
build-aux/: git-version.sh
include/: Makefile.am
include/bloom-boba/: ansi_sequences.h  cmd.h  component.h  msg.h  runtime.h  style.h  tui.h
include/bloom-boba/components/: textinput.h  textview.h  viewport.h
include/boba/: ansi_sequences.h  cmd.h  component.h  dynamic_buffer.h  input_parser.h  msg.h  runtime.h  style.h  tui.h  unicode.h
include/boba/components/: statusbar.h  textinput.h  textview.h  viewport.h
scripts/: build-ucrt64.sh
src/: Makefile.am  ansi_sequences.c  base64.c  base64.h  cmd.c  dynamic_buffer.c  input_parser.c  msg.c  runtime.c  style.c  unicode.c
src/components/: statusbar.c  textinput.c  textview.c  viewport.c
tests/: Makefile.am  test_ansi.c  test_clipboard.c  test_focus.c  test_input_parser.c  test_runtime.c  test_statusbar.c  test_style.c  test_textinput.c  test_viewport.c
tests/apps/: tmux_focus_swap.c  tmux_textinput_multi.c
tests/tmux/: focus_shift_tab.sh  lib.sh  scroll_multiline.sh
