# include/Makefile.am - Install boba public headers

bobadir = $(includedir)/boba
boba_HEADERS = \
    boba/tui.h \
    boba/msg.h \
    boba/cmd.h \
    boba/component.h \
    boba/input_parser.h \
    boba/runtime.h \
    boba/dynamic_buffer.h \
    boba/ansi_sequences.h \
    boba/unicode.h \
    boba/style.h

boba_componentsdir = $(includedir)/boba/components
boba_components_HEADERS = \
    boba/components/textinput.h \
    boba/components/textview.h \
    boba/components/viewport.h \
    boba/components/statusbar.h
